<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_api_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3163C9"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">


    <ViewFlipper
        android:id="@+id/view_filp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/view_pager_background"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_user_btn">


        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/list_item" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/add_user_note"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/user_id"
                app:layout_constraintStart_toStartOf="@+id/user_id"
                app:layout_constraintTop_toBottomOf="@+id/user_id_submit_btn" />

            <EditText
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:ems="10"
                android:hint="User id"
                android:inputType="number"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/user_id_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/connect_btn"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/user_id"
                app:layout_constraintTop_toBottomOf="@+id/user_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/change_pass"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/hs_password"
                app:layout_constraintEnd_toEndOf="@+id/hs_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/hs_password" />

            <EditText
                android:id="@+id/hs_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/hs_re_password"
                app:layout_constraintEnd_toEndOf="@+id/hs_re_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/hs_re_password" />

            <EditText
                android:id="@+id/hs_re_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="196dp"
                android:ems="10"
                android:hint="@string/repass"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/hs_sub_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/connect_btn"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/hs_re_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/hs_re_password"
                app:layout_constraintTop_toBottomOf="@+id/hs_re_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/uri_note"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/uri_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="URI"
                android:inputType="textUri"
                android:paddingLeft="10dp"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/uri_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/connect_btn"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/uri_edit_text"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/uri_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/uri_edit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewFlipper>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="-23dp"
        android:src="@drawable/box"
        app:layout_constraintBottom_toTopOf="@+id/view_filp"
        app:layout_constraintEnd_toEndOf="@+id/view_filp"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/view_filp" />

    <Button
        android:id="@+id/add_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_user"
        android:textAlignment="center"
        android:textColor="#3163C9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/change_wifi_btn"
        app:layout_constraintStart_toStartOf="@+id/change_wifi_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_wifi_btn" />

    <Button
        android:id="@+id/change_wifi_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/change_wifi"
        android:textAlignment="center"
        android:textColor="#3163C9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/change_pass_btn"
        app:layout_constraintStart_toStartOf="@+id/change_pass_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_pass_btn" />

    <Button
        android:id="@+id/change_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/change_pass"
        android:textAlignment="center"
        android:textColor="#3163C9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/change_uri_btn"
        app:layout_constraintStart_toStartOf="@+id/change_uri_btn"
        app:layout_constraintTop_toBottomOf="@+id/change_uri_btn" />

    <Button
        android:id="@+id/change_uri_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/montserrat_medium"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/change_api"
        android:textColor="#3163C9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/wifi_logo"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ssid_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>